fix up the message on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,36 @@
     --glossary-nav-heigth: 134px;
 }
 
+.mobile-message {
+    background-color: var(--uek-yellow);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 8px 60px 10px 15px;
+}
 
+.mobile-message::before, .mobile-message::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 30px;
+    display: block;
+    background: black;
+    right: 23px;
+    top: 33px;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
 
+.mobile-message::after {
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
 
+.mobile-message p {
+    margin: 0;
+}
 
 /* General for all viz */
 
@@ -361,8 +388,7 @@ span.interact-with-viz .action {
     margin-bottom: 0;
 }
 
-.small-screen-viz svg,
-.small-screen-viz img {
+.small-screen-viz svg, .small-screen-viz img {
     width: 100%;
     margin: .4rem 0 .6rem;
 }
@@ -371,9 +397,6 @@ span.interact-with-viz .action {
     font-family: 'Brandon Grotesque', sans-serif;
     font-size: 14px;
 }
-
-
-
 
 /* Cover */
 
@@ -399,7 +422,6 @@ span.interact-with-viz .action {
     top: 0.2rem;
 }
 
-
 .cover h1 span {
     font-weight: 700;
 }
@@ -408,13 +430,9 @@ span.interact-with-viz .action {
     font-size: 3rem;
 }
 
-
-
-
 /* Navigation form UEK */
 
-.navigation-wrapper input[type="text"],
-.navigation-wrapper input[type="submit"] {
+.navigation-wrapper input[type="text"], .navigation-wrapper input[type="submit"] {
     background-color: transparent;
     text-transform: inherit;
 }
@@ -422,9 +440,6 @@ span.interact-with-viz .action {
 .navigation-wrapper input[type="submit"] {
     border: none;
 }
-
-
-
 
 /* Navigation Sidebar */
 
@@ -491,30 +506,22 @@ span.interact-with-viz .action {
     border-radius: 2px;
 }
 
-.link-introduction,
-#navigation-sidebar .nav-link.link-introduction:hover,
-.link-introduction h6 {
+.link-introduction, #navigation-sidebar .nav-link.link-introduction:hover, .link-introduction h6 {
     width: 123px;
     opacity: 1;
 }
 
-.link-geographies,
-#navigation-sidebar .nav-link.link-geographies:hover,
-.link-geographies h6 {
+.link-geographies, #navigation-sidebar .nav-link.link-geographies:hover, .link-geographies h6 {
     width: 208px;
     opacity: 1;
 }
 
-.link-interconnections,
-#navigation-sidebar .nav-link.link-interconnections:hover,
-.link-interconnections h6 {
+.link-interconnections, #navigation-sidebar .nav-link.link-interconnections:hover, .link-interconnections h6 {
     width: 160px;
     opacity: 1;
 }
 
-.link-entering-exiting,
-#navigation-sidebar .nav-link.link-entering-exiting:hover,
-.link-entering-exiting h6 {
+.link-entering-exiting, #navigation-sidebar .nav-link.link-entering-exiting:hover, .link-entering-exiting h6 {
     width: 202px;
     opacity: 1;
 }
@@ -543,10 +550,7 @@ span.interact-with-viz .action {
     display: block;
 }
 
-#navigation-sidebar .subnav a,
-#navigation-sidebar .subnav p,
-#navigation-sidebar .subnav,
-#navigation-sidebar .link-container {
+#navigation-sidebar .subnav a, #navigation-sidebar .subnav p, #navigation-sidebar .subnav, #navigation-sidebar .link-container {
     pointer-events: none;
 }
 
@@ -554,20 +558,15 @@ span.interact-with-viz .action {
     pointer-events: auto;
 }
 
-#navigation-sidebar .subnav a:not(.active),
-#navigation-sidebar .subnav a:not(.active) p {
+#navigation-sidebar .subnav a:not(.active), #navigation-sidebar .subnav a:not(.active) p {
     opacity: 0;
     -webkit-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
 }
 
-#navigation-sidebar .subnav .active,
-#navigation-sidebar .subnav .active p {
+#navigation-sidebar .subnav .active, #navigation-sidebar .subnav .active p {
     opacity: 1;
 }
-
-
-
 
 /* Sidepanel */
 
@@ -642,9 +641,7 @@ span.interact-with-viz .action {
     cursor: pointer;
 }
 
-.sidepanel-button a,
-.sidepanel-button a:hover,
-.sidepanel-button a:focus {
+.sidepanel-button a, .sidepanel-button a:hover, .sidepanel-button a:focus {
     color: #000000;
     text-decoration: none;
 }
@@ -661,10 +658,6 @@ span.interact-with-viz .action {
 body.color-scheme-laser .sidepanel p a {
     color: var(--uek-dark-blue);
 }
-
-
-
-
 
 /* 1.1 timeline */
 
@@ -729,9 +722,7 @@ body.color-scheme-laser .sidepanel p a {
     opacity: 0.2;
 }
 
-.dots-soc,
-.dots-leg,
-.dots-det {
+.dots-soc, .dots-leg, .dots-det {
     fill: #90BCCC;
 }
 
@@ -749,10 +740,6 @@ body.color-scheme-laser .sidepanel p a {
     position: relative;
     top: 64px;
 }
-
-
-
-
 
 /* 1.2 mosaic plot and sankey */
 
@@ -773,13 +760,9 @@ body.color-scheme-laser .sidepanel p a {
     opacity: .6 !important;
 }
 
-
-
-
 /* 1.3 bubblechart - purpose of institutions */
 
-#bubblechart circle.node,
-#bubblechart .item circle {
+#bubblechart circle.node, #bubblechart .item circle {
     cursor: pointer;
 }
 
@@ -800,9 +783,6 @@ body.color-scheme-laser .sidepanel p a {
 #bubblechart .legend g:first-child circle {
     display: none;
 }
-
-
-
 
 /* 1.4 typologies network of correlations */
 
@@ -850,11 +830,7 @@ body.color-scheme-laser .sidepanel p a {
     font-weight: 700;
 }
 
-
-
-
 /* STYLES CHAPTER 2 */
-
 
 /* container styles */
 
@@ -880,8 +856,7 @@ body.color-scheme-laser .sidepanel p a {
     height: 60vh;
 }
 
-.btn-container,
-.btn-container-direction {
+.btn-container, .btn-container-direction {
     position: relative;
     height: 22px;
 }
@@ -930,9 +905,6 @@ body.color-scheme-laser .sidepanel p a {
     white-space: pre;
 }
 
-
-
-
 /* swiss map styles */
 
 .swiss-contour {
@@ -950,13 +922,9 @@ body.color-scheme-laser .sidepanel p a {
     stroke-width: .5px;
 }
 
-
-
-
 /* map_all_institutions styles */
 
-.dot,
-.dot-small {
+.dot, .dot-small {
     fill: #333333;
     cursor: pointer;
 }
@@ -969,9 +937,6 @@ body.color-scheme-laser .sidepanel p a {
 .item-text {
     font-size: .65rem;
 }
-
-
-
 
 /* map_typologies styles */
 
@@ -993,13 +958,7 @@ body.color-scheme-laser .sidepanel p a {
     opacity: .3;
 }
 
-
-
-
-
-
 /* STYLES CHAPTER 3 */
-
 
 /* matrix */
 
@@ -1059,10 +1018,6 @@ body.color-scheme-laser .sidepanel p a {
     padding-bottom: 0.1rem;
 }
 
-
-
-
-
 /* STYLES CHAPTER 4 */
 
 .diagram-container {
@@ -1073,9 +1028,6 @@ body.color-scheme-laser .sidepanel p a {
 .svg-diagram {
     width: 230%;
 }
-
-
-
 
 /* typologies network of correlations */
 
@@ -1089,7 +1041,6 @@ body.color-scheme-laser .sidepanel p a {
     -webkit-transition: opacity 0.5s ease;
     transition: opacity 0.5s ease;
 }
-
 
 #circular-network .link {
     fill: none;
@@ -1192,20 +1143,17 @@ body.color-scheme-laser .sidepanel p a {
         font-size: 3.8rem;
         line-height: 3.4rem;
     }
-
     h2 {
         font-size: 2.2rem;
         margin-bottom: 5rem;
         margin-top: 4rem;
     }
-
     .cover {
         background-image: url(../assets/cover-image-lg.jpg);
         height: 60vw;
         max-height: 65vh;
         margin-top: 4.5rem !important;
     }
-
     /*.cover {
         height: 40vw;
         max-height: 75vh;
@@ -1219,14 +1167,12 @@ body.color-scheme-laser .sidepanel p a {
         letter-spacing: 1.5px;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.7);
     }*/
-
     .initial-loader div {
         width: 20vw;
     }
     .initial-loader svg {
         width: 20vw;
     }
-
     .initial-loader p {
         width: 20vw;
     }
